syntax = "proto3";

package notify;

option go_package = "api/proto/pb;proto";

service Test {
}

message TestReq {
  string app_id = 1;
  string app_secret = 2;
  repeated string open_ids = 3;
  string msg = 4;
}